layout css created

--- a/index.html
+++ b/index.html
@@ -10,9 +10,22 @@
   <link rel="stylesheet" href="./styles/index.css">
 
   <title>Matricula | Cadastro</title>
-  
+
 </head>
 <body>
+  <div id="app">
+    <main>
+      <div class="main-container">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat excepturi numquam unde amet harum, deserunt quasi esse quod dolore cumque voluptates facilis fugit blanditiis quae illo libero eum, nulla exercitationem!
+      </div>
+    </main>
+
+    <aside>
+      <div class="aside-container">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate modi quis sit repellat est aut quam officia voluptatem eius provident debitis ad fugiat aperiam, porro nobis ex, dolores suscipit natus?
+      </div>
+    </aside>
+  </div>
   
 </body>
 </html>
