--- a/index.html
+++ b/index.html
@@ -16,13 +16,23 @@
   <div id="app">
     <main>
       <div class="main-container">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat excepturi numquam unde amet harum, deserunt quasi esse quod dolore cumque voluptates facilis fugit blanditiis quae illo libero eum, nulla exercitationem!
+        <div class="back">
+          <img src="./assets/icons/arrow-left-02.svg" alt="voltar">
+          <span>Voltar</span>
+        </div>
+        <h1>Formulário de matricula</h1>
+        <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
       </div>
     </main>
 
     <aside>
       <div class="aside-container">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate modi quis sit repellat est aut quam officia voluptatem eius provident debitis ad fugiat aperiam, porro nobis ex, dolores suscipit natus?
+        <header>
+          <img src="./assets/logo.svg" alt="logomarca">
+          <h2>Porque cada momento de <span>aprendizado</span> conta</h2>
+          <p>Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e estimulante.</p>
+        </header>
+        <img src="./assets/Illustration.svg" alt="ilustração de uma professora com crianças prestando atenção">
       </div>
     </aside>
   </div>
