--- a/index.html
+++ b/index.html
@@ -22,6 +22,57 @@
         </div>
         <h1>Formulário de matricula</h1>
         <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
+        
+        <form action="" method="post" enctype="multipart/form-data">
+          <fieldset class="child-info">
+            <legend>Informação da criança</legend>
+
+            <div class="input-wrapper">
+              <label for="fullname">Nome completo</label>
+              <input 
+              name="fullname"
+              id="fullname" 
+              type="text"
+              placeholder="Qual o nome da criança?">
+            </div>
+
+            <div class="input-wrapper">
+              <label for="birth">Data de nascimento</label>
+              <input 
+              name="birth"
+              id="birth" 
+              type="date" 
+              lang="pt-br">
+            </div>
+
+            <div class="select-wrapper">
+              <label for="gender">Sexo</label>
+              <select name="gender" id="gender">
+                <option value="male">Masculino</option>
+                <option value="female">Feminino</option>
+              </select>
+            </div>
+
+            <div class="textarea-wrapper">
+              <label for="medical-info">Informações médicas</label>
+              <textarea 
+              cols="30" 
+              rows="10" 
+              name="medical-info" 
+              id="medical-info" 
+              placeholder="A criança possui alguma condição médica que a escola deve estar ciente? Se sim, especifique.">
+              </textarea>
+            </div>
+
+            <div class="droparea-wrapper">
+              <label for="birth-file">Certidão de nascimento</label>
+              <input type="file" name="birth-file" id="birth-file">
+              <img src="./assets/icons/cloud-upload.svg" alt="">
+              <p>Clique aqui para <br>Selecionar os arquivos</p>
+            </div>
+
+          </fieldset>
+        </form>
       </div>
     </main>
 
