--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./styles/index.css">
 
   <title>Matricula | Cadastro</title>
 
 </head>
+
 <body>
   <div id="app">
     <main>
@@ -22,27 +26,19 @@
         </div>
         <h1>Formulário de matricula</h1>
         <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.</p>
-        
+
         <form action="" method="post" enctype="multipart/form-data">
           <fieldset class="child-info">
             <legend>Informação da criança</legend>
 
             <div class="input-wrapper">
               <label for="fullname">Nome completo</label>
-              <input 
-              name="fullname"
-              id="fullname" 
-              type="text"
-              placeholder="Qual o nome da criança?">
+              <input name="fullname" id="fullname" type="text" placeholder="Qual o nome da criança?">
             </div>
 
             <div class="input-wrapper">
               <label for="birth">Data de nascimento</label>
-              <input 
-              name="birth"
-              id="birth" 
-              type="date" 
-              lang="pt-br">
+              <input name="birth" id="birth" type="date" lang="pt-br">
             </div>
 
             <div class="select-wrapper">
@@ -55,12 +51,9 @@
 
             <div class="textarea-wrapper">
               <label for="medical-info">Informações médicas</label>
-              <textarea 
-              placeholder="A criança possui alguma condição médica que a escola deve estar ciente? Se sim, especifique."
-              cols="30" 
-              rows="6" 
-              name="medical-info" 
-              id="medical-info"></textarea>
+              <textarea
+                placeholder="A criança possui alguma condição médica que a escola deve estar ciente? Se sim, especifique."
+                cols="30" rows="6" name="medical-info" id="medical-info"></textarea>
             </div>
 
             <div class="droparea-wrapper">
@@ -68,12 +61,49 @@
               <div class="dropzone">
                 <input type="file" name="birth-file" id="birth-file">
                 <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M34.9552 18.0221C34.97 18.022 34.985 18.022 35 18.022C39.9706 18.022 44 22.0588 44 27.0386C44 31.6796 40.5 35.5016 36 36M34.9552 18.0221C34.9848 17.6921 35 17.3579 35 17.0202C35 10.9339 30.0752 6 24 6C18.2465 6 13.5247 10.4253 13.0408 16.0638M34.9552 18.0221C34.7506 20.2952 33.8572 22.3692 32.4856 24.033M13.0408 16.0638C7.96796 16.5475 4 20.8278 4 26.0366C4 30.8834 7.43552 34.9264 12 35.8546M13.0408 16.0638C13.3565 16.0337 13.6765 16.0183 14 16.0183C16.2516 16.0183 18.3295 16.7639 20.001 18.022" stroke="#D6D3D1" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
-                  <path d="M24 26V42M24 26C22.5996 26 19.9831 29.9886 19 31M24 26C25.4004 26 28.017 29.9886 29 31" stroke="#D6D3D1" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
-                  </svg>
+                  <path
+                    d="M34.9552 18.0221C34.97 18.022 34.985 18.022 35 18.022C39.9706 18.022 44 22.0588 44 27.0386C44 31.6796 40.5 35.5016 36 36M34.9552 18.0221C34.9848 17.6921 35 17.3579 35 17.0202C35 10.9339 30.0752 6 24 6C18.2465 6 13.5247 10.4253 13.0408 16.0638M34.9552 18.0221C34.7506 20.2952 33.8572 22.3692 32.4856 24.033M13.0408 16.0638C7.96796 16.5475 4 20.8278 4 26.0366C4 30.8834 7.43552 34.9264 12 35.8546M13.0408 16.0638C13.3565 16.0337 13.6765 16.0183 14 16.0183C16.2516 16.0183 18.3295 16.7639 20.001 18.022"
+                    stroke="#D6D3D1" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M24 26V42M24 26C22.5996 26 19.9831 29.9886 19 31M24 26C25.4004 26 28.017 29.9886 29 31"
+                    stroke="#D6D3D1" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
                 <p>Clique aqui para <br>Selecionar os arquivos</p>
               </div>
             </div>
+          </fieldset>
+
+          <fieldset class="address">
+            <legend>Endereço residencial</legend>
+            <div class="input-wrapper">
+              <label for="cep">CEP</label>
+              <input id="cep" name="cep" type="text">
+            </div>
+
+            <div class="flex">
+              <div class="input-wrapper flex-2">
+                <label for="street">Rua</label>
+                <input id="street" name="street" type="text" value="Rua das Flores" disabled>
+              </div>
+
+              <div class="input-wrapper flex-1">
+                <label for="number">Número</label>
+                <input id="number" name="number" type="number">
+              </div>
+
+            </div>
+
+            <div class="flex">
+              <div class="input-wrapper flex-2">
+                <label for="city">Rua</label>
+                <input id="city" name="city" type="text" value="São Paulo" disabled>
+              </div>
+              <div class="input-wrapper flex-1">
+                <label for="state">Estado</label>
+                <input id="state" name="state" type="text" disabled value="SP">
+              </div>
+
+            </div>
+
           </fieldset>
         </form>
       </div>
@@ -90,6 +120,7 @@
       </div>
     </aside>
   </div>
-  
+
 </body>
+
 </html>
