--- a/index.html
+++ b/index.html
@@ -101,9 +101,31 @@
                 <label for="state">Estado</label>
                 <input id="state" name="state" type="text" disabled value="SP">
               </div>
+            </div>
+          </fieldset>
 
+          <fieldset class="gardian">
+            <legend>Informações do responsável</legend>
+
+            <div class="input-wrapper">
+              <label for="gardian">Nome</label>
+              <input type="text" name="gardian" id="gardian">
+              <small>Principal responsável legal e contato de emergência</small>
             </div>
 
+            <div class="input-wrapper">
+              <label for="phone">Telefone</label>
+              <input type="tel" name="phone" id="phone" placeholder="(85) 987397407">
+            </div>
+
+            <div class="input-wrapper">
+              <label for="mail">E-mail</label>
+              <input type="email" name="email" id="email" placeholder="johndoe@hotmail.com" required>
+              <div class="error">
+                <img src="./assets/icons/alert-circle.svg" alt="ícone de alerta">
+                <span>Insira um e-mail válido</span>
+              </div>
+            </div>
           </fieldset>
         </form>
       </div>
