--- a/index.html
+++ b/index.html
@@ -127,6 +127,28 @@
               </div>
             </div>
           </fieldset>
+
+          <fieldset class="enroll-options">
+            <legend>Opções de matrículas</legend>
+            <div class="input-wrapper">
+              <label for="">Seleciona o turno de estudo</label>
+              <div class="radio-wrapper">
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="study-shift" id="morning" value="morning">
+                  <img src="./assets/icons/sun-cloud-02.svg" alt="">
+                  <label for="morning">Manhã</label>
+                </div>
+
+                <div class="radio-inner">
+                  <div class="radio-image"></div>
+                  <input type="radio" name="study-shift" id="evening" value="evening">
+                  <img src="./assets/icons/sun-02.svg" alt="">
+                  <label for="evening">Tarde</label>
+                </div>
+              </div>
+            </div>
+          </fieldset>
         </form>
       </div>
     </main>
