--- a/index.html
+++ b/index.html
@@ -207,6 +207,16 @@
             <input type="checkbox" name="terms" id="terms">
             <label for="terms">Declaro que li e concordo com os <strong>Termos e Condições</strong>  e com a <strong>Política de Privacidade</strong>  da escola Estrela do Amanhã </label>
           </div>
+
+          <div class="actions-wrapper">
+            <button class="btn-secondary" type="button">
+              Salvar respostas
+            </button>
+
+            <button class="btn-primary" type="submit">
+              Realizar matricula
+            </button>
+          </div>
         </form>
       </div>
     </main>
@@ -224,5 +234,4 @@
   </div>
 
 </body>
-
 </html>
